<resources>
    <string name="app_name">ListaEventos</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="detalhes">Detalhes</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="adress">Adress</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="suite">Suite</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="company_name">Company Name</string>
    <string name="catchphrase">CatchPhrase</string>
    <string name="bs">bs</string>
</resources>
